Error handling and compatability updates

--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -853,6 +853,7 @@ li.mu-product-slider-item {
     position: relative;
     display: inline-flex;
     cursor: pointer;
+    white-space: nowrap;
   }
 
   & + label::before,
