--- a/src/storefront/src/templates/pages/contacts.pug
+++ b/src/storefront/src/templates/pages/contacts.pug
@@ -7,7 +7,7 @@ block vars
       breadcrumbs: {}
     }
 
-    informationalActivePage = 'contacts'
+    informationalActivePage = 'contact'
 
 block informational
   article(class="uk-card " +
