--- a/src/storefront/src/templates/pages/checkout.pug
+++ b/src/storefront/src/templates/pages/checkout.pug
@@ -16,7 +16,11 @@ block checkout
         div.uk-text-center.uk-width-expand(mu-hide="!submitting")
           span(uk-spinner)
           |  Creating Order...
-        div.uk-grid-medium.uk-child-width-1-1(uk-grid  mu-hide="submitting")
+        div.uk-grid-medium.uk-child-width-1-1(uk-grid mu-hide="submitting")
+          //- ERROR
+          div.uk-text-warning.uk-text-center.uk-padding-small(mu-if="error")
+            +icon('warning')(class="uk-margin-small-right")
+            span(mu-html="error")
 
           //- Contact Information
           section
@@ -143,55 +147,64 @@ block checkout
           uk-sticky="offset: 30; bottom: true; media: @m;")
 
           div(mu-cart onItems="onCartItems")
-            section.uk-card-body
-              h4 Items in order
-              div.uk-grid-small(uk-grid mu-each="items" mu-each-as="row")
-                div.uk-width-expand
-                  div.uk-text-small(mu-html="row.product.name")
-                  div.uk-text-meta.uk-text-xsmall
-                      span(mu-html="row.item.quantity")
-                      |  × 
-                      +price("row.item.rowUnitPrice")
+            //- empty
+            section.uk-card-body(mu-if="isEmpty")
+              div.uk-text-danger.uk-text-center
+                +icon('ban')(class="uk-margin-small-right")
+                span Shopping cart is empty
+              a.uk-button.uk-button-primary.uk-margin-small.uk-width-1-1(
+                href="catalog.html" mu-route) Shop Products
 
-                div.uk-text-right
-                  +price("row.item.rowTotalPrice")
+            div(mu-if="!isEmpty")
+              section.uk-card-body
+                h4 Items in order
+                div.uk-grid-small(uk-grid mu-each="items" mu-each-as="row")
+                  div.uk-width-expand
+                    div.uk-text-small(mu-html="row.product.name")
+                    div.uk-text-meta.uk-text-xsmall
+                        span(mu-html="row.item.quantity")
+                        |  × 
+                        +price("row.item.rowUnitPrice")
 
-            section.uk-card-body
+                  div.uk-text-right
+                    +price("row.item.rowTotalPrice")
 
-              div.uk-grid-small(uk-grid)
-                div.uk-width-expand.uk-text-muted Payment
-                div.uk-text-right Online by card
+              section.uk-card-body
 
-            section.uk-card-body
-              //- subtotal
-              div.uk-grid-small(uk-grid)
-                div.uk-width-expand.uk-text-muted Subtotal
-                div.uk-text-right
-                  +price("totals.subtotal")
+                div.uk-grid-small(uk-grid)
+                  div.uk-width-expand.uk-text-muted Payment
+                  div.uk-text-right Online by card
 
-              //- tax
-              div.uk-grid-small(uk-grid)
-                div.uk-width-expand.uk-text-muted Tax
-                div
-                  +price("totals.tax")
+              section.uk-card-body
+                //- subtotal
+                div.uk-grid-small(uk-grid)
+                  div.uk-width-expand.uk-text-muted Subtotal
+                  div.uk-text-right
+                    +price("totals.subtotal")
 
-              //- shipping
-              div.uk-grid-small(uk-grid)
-                div.uk-width-expand.uk-text-muted(mu-class="{'uk-text-success': '!rawTotals.shipping'}")
-                  span(mu-if="!rawTotals.shipping") FREE
-                    | 
-                  span Shipping
-                div.uk-text-right
-                  div(mu-if="rawTotals.shipping")
-                    +price("totals.shipping")
-                  s(mu-if="!rawTotals.shipping")
-                    +price("totals.shipRate")
+                //- tax
+                div.uk-grid-small(uk-grid)
+                  div.uk-width-expand.uk-text-muted Tax
+                  div
+                    +price("totals.tax")
 
-              //- discounts
-              div.uk-grid-small(uk-grid mu-if="rawTotals.discounts")
-                div.uk-width-expand.uk-text-muted Discounts
-                div.uk-text-danger.uk-text-right
-                  +price("totals.discounts", true)
+                //- shipping
+                div.uk-grid-small(uk-grid)
+                  div.uk-width-expand.uk-text-muted(mu-class="{'uk-text-success': '!rawTotals.shipping'}")
+                    span(mu-if="!rawTotals.shipping") FREE
+                      | 
+                    span Shipping
+                  div.uk-text-right
+                    div(mu-if="rawTotals.shipping")
+                      +price("totals.shipping")
+                    s(mu-if="!rawTotals.shipping")
+                      +price("totals.shipRate")
+
+                //- discounts
+                div.uk-grid-small(uk-grid mu-if="rawTotals.discounts")
+                  div.uk-width-expand.uk-text-muted Discounts
+                  div.uk-text-danger.uk-text-right
+                    +price("totals.discounts", true)
 
             section.uk-card-body
               //- total
