--- a/src/storefront/src/templates/pages/orders.pug
+++ b/src/storefront/src/templates/pages/orders.pug
@@ -10,9 +10,18 @@ block vars
 
 block account
   //- loader
-  div(mu-orders)
+  div(mu-orders mu-cloak)
     section.uk-text-center.uk-padding(hidden mu-hide="!loading")
       div(uk-spinner)
+
+    //- ERROR
+    div.uk-text-warning.uk-text-center.uk-padding-small(mu-if="error")
+      +icon('warning')(class="uk-margin-small-right")
+      span(mu-html="error")
+
+    //- No orders
+    div.uk-text-center.uk-padding-small(mu-if="noHistory")
+      div.uk-text-lead We couldn't find any previous orders in our records
 
     //- each order in orders
     div(mu-if="orders")
