--- a/src/storefront/src/templates/pages/product.pug
+++ b/src/storefront/src/templates/pages/product.pug
@@ -133,7 +133,7 @@ block pages
                         //- Add to cart button
                         div
                           button.uk-button.uk-button-primary.tm-product-add-button.tm-shine(
-                            mu-attr mu-attr-disabled="!product.qty"
+                            mu-attr mu-attr-disabled="!product.count"
                             mu-click="atc"
                           ) add to cart
 
