Storefront tweaks - Filter clearing - order validation - notification improvement - card padding - atc improvement from sku page

--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -139,6 +139,13 @@
   cursor: pointer;
 }
 
+// Notifications
+// ========================================================================
+
+@notification-width:                            475px;
+@notification-close-top:                        @global-small-margin;
+@notification-close-right:                      @global-small-margin;
+
 // Switcher
 // ========================================================================
 
