--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -472,11 +472,11 @@ li.mu-product-slider-item {
     height: 100%;
   }
 
-  & > .tm-ratio > .tm-media-box {
-    // padding: 15px;
-    // padding: 0;
-    padding: 5px;
-  }
+  // & > .tm-ratio > .tm-media-box {
+  //   // padding: 15px;
+  //   // padding: 0;
+  //   padding: 5px;
+  // }
 
   &:hover {
     transform: scale(1.02);
