--- a/src/storefront/src/templates/pages/checkout.pug
+++ b/src/storefront/src/templates/pages/checkout.pug
@@ -129,17 +129,7 @@ block checkout
 
                   div.uk-text-meta
                     +icon("lock", ".75")(class="uk-margin-xsmall-right")
-                    | Security of payments is is provided by secure protocols
-
-                  div
-                    img(src="images/verified-by-visa.svg"
-                        title="Verified by Visa"
-                        style="height: 25px;")
-
-                  div
-                    img(src="images/mastercard-securecode.svg"
-                        title="MasterCard SecureCode"
-                        style="height: 25px;")
+                    | Security of payments is <b>not really</b> provided by secure protocols
 
       //- Checkout
       div(class="uk-width-1-1 uk-width-1-4@m tm-aside-column")
