--- a/src/storefront/src/templates/layouts/_index.pug
+++ b/src/storefront/src/templates/layouts/_index.pug
@@ -21,6 +21,7 @@ html(lang="en")
     div#app.uk-offcanvas-content
       block index
     script(src="scripts/app.js" defer)
+    script(src="scripts/charts.js" defer async)
     //- script(src="scripts/script.js" defer)
     //- script(src="//maps.googleapis.com/maps/api/js?key=&callback=initMap"
     //-        async
