--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -359,6 +359,7 @@
 @ratio-3-2:                                     66.66%;
 @ratio-4-3:                                     75%;
 @ratio-16-9:                                    56.25%;
+@ratio-2-1:                                     50%;
 
 
 // Media box
