--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -20,15 +20,17 @@ block article
         h1.uk-article-title= page.title
 
       div.uk-article-body
-        p.uk-text-lead.uk-text-center Urabitur justo diam, auctor vitae ornare sit amet, accumsan sed neque. Curabitur efficitur lacinia euismod. Nunc dictum sagittis lacus. Etiam ultrices nulla orci, in ultrices risus.
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac tortor sit amet nisi malesuada commodo. Phasellus et tempus justo. Sed iaculis dignissim lacinia. Nulla id felis vel ligula tempus sodales vel a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis neque ac elit lacinia laoreet. Sed dolor sem, rutrum ac egestas non, tempor nec eros. Etiam lobortis porta viverra. Etiam ut suscipit sem, a volutpat mi. Maecenas euismod a lectus ut dapibus. Nulla mattis diam et leo lacinia dignissim.
+        h2.uk-text-center MuShop Service Diagram
+        div.tm-ratio.tm-ratio-2-1(mu-service-chart)
+          div.mu-tech.mu-tech-oci.uk-animation-fade(mu-tech-box="OCI" mu-hide="hide.oci")
+            img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/oci.png")
+          div.mu-tech.mu-tech-oke.uk-animation-fade(mu-tech-box="OKE" mu-hide="hide.oke")
+            img.mu-tech-img.uk-position-top-left(uk-img data-src="images/tech/k8s.png")
+          figure(mu-chart options="services.chart" onInit="initChart")
 
-        h2.uk-text-center Our principles
-        ul.uk-list.uk-list-bullet
-          li Vestibulum ut mollis est. Fusce iaculis mauris ut tortor convallis sollicitudin. Suspendisse porta nulla nibh, id lacinia lacus tempus ut. Morbi non arcu aliquam, placerat sapien a, luctus diam. Etiam mattis cursus sem, eu maximus nisi bibendum nec. Vivamus ut turpis augue. Phasellus vehicula risus sit amet mi luctus malesuada.
-          li Curabitur justo diam, auctor vitae ornare sit amet, accumsan sed neque. Curabitur efficitur lacinia euismod. Nunc dictum sagittis lacus. Etiam ultrices nulla orci, in ultrices risus tincidunt ac. Cras et maximus mauris. Morbi aliquam efficitur maximus. Aenean orci diam, auctor a mattis eu, consectetur id urna.
-          li Morbi faucibus mattis ante. Donec varius neque sem, nec convallis mi dictum ut. Duis sit amet massa ac eros luctus egestas. Proin hendrerit aliquam metus, ac tincidunt risus viverra at. In viverra, ligula in facilisis interdum, dui arcu varius purus, eu blandit mi mi ut diam. Phasellus finibus metus sit amet lobortis dapibus. Nunc fringilla ac erat vitae elementum. Donec sagittis odio non mi vestibulum accumsan.
+        //- p.uk-text-lead TODO: Describe the services...
 
+      //- div
         h2.uk-text-center Our team
         div(class="uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m"
             uk-grid)
@@ -93,16 +95,4 @@ block article
                 div Nicole Yokoyama
                 div.uk-text-meta Product Marketing Manager
 
-        h2.uk-text-center Some stats
-        div(class="uk-child-width-1-1 uk-child-width-1-3@s uk-text-center"
-            uk-grid)
-          div
-            div.uk-heading-primary.uk-text-warning 5+
-            div.uk-margin-small-top years on the market
-          div
-            div.uk-heading-primary.uk-text-warning 150+
-            div.uk-margin-small-top orders per day
-          div
-            div.uk-heading-primary.uk-text-warning 75000+
-            div.uk-margin-small-top clients
             
