updated shop to include edge, and handle WAF exceptions

--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -35,6 +35,7 @@
 @color-grey:                                    #939699;
 @color-highlight:                                 @color-orange;
 @color-hyperlink:                               #00758f;
+@color-icon-muted:                              #5F5F5F;
 
 // incorporate brand
 @global-link-color:                               @color-hyperlink;
