--- a/src/storefront/src/templates/data/_data.pug
+++ b/src/storefront/src/templates/data/_data.pug
@@ -169,10 +169,10 @@
     title: 'Contact',
     href: 'contacts.html'
   }, {
-    id: 'blog',
-    title: 'Blog',
-    href: 'blog.html'
-  }, {
+  //-   id: 'blog',
+  //-   title: 'Blog',
+  //-   href: 'blog.html'
+  //- }, {
     id: 'faq',
     title: 'FAQ',
     href: 'faq.html'
