--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -25,7 +25,8 @@ block article
           div.mu-tech.mu-tech-oci.uk-animation-fade(mu-tech-box="OCI" mu-hide="hide.oci")
             img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/oci.png")
           div.mu-tech.mu-tech-oke.uk-animation-fade(mu-tech-box="OKE" mu-hide="hide.oke")
-            img.mu-tech-img.uk-position-top-left(uk-img data-src="images/tech/k8s.png")
+            img.mu-tech-img.uk-position-bottom-left(uk-img data-src="images/tech/k8s.png")
+          div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
           figure(mu-chart options="services.chart" onInit="initChart")
 
         //- p.uk-text-lead TODO: Describe the services...
