--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -3,7 +3,7 @@ extends /layouts/_article
 block vars
   -
     page = {
-      title: 'About',
+      title: 'About ' + shopInfo.storeName,
       breadcrumbs: {}
     }
 
@@ -17,83 +17,81 @@ block article
 
       header.uk-text-center
         //- Title
-        h1.uk-article-title= page.title
+        h1.uk-article-title= shopInfo.storeName + " CloudNative Demo"
 
-      div.uk-article-body
-        h2.uk-text-center MuShop Service Diagram
-        div.tm-ratio.tm-ratio-2-1(mu-service-chart)
+      div.uk-article-body(mu-service-chart)
+        div
+          p.uk-text-lead Welcome to MuShop!
+
+        h2.uk-text-center Service Diagram
+        div.tm-ratio.tm-ratio-2-1
           div.mu-tech.mu-tech-oci.uk-animation-fade(mu-tech-box="OCI" mu-hide="hide.oci")
             img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/oci.png")
           div.mu-tech.mu-tech-oke.uk-animation-fade(mu-tech-box="OKE" mu-hide="hide.oke")
             img.mu-tech-img.uk-position-bottom-left(uk-img data-src="images/tech/k8s.png")
           div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
           figure(mu-chart options="services.chart" onInit="initChart")
+        
+        h2.uk-text-center Additional Information
+        div.uk-overflow-auto
+          ul.uk-child-width-expand(uk-tab)
+            li.uk-active
+              a Services
+            li
+              a Services (Other)
+            li
+              a Assumptions
 
-        //- p.uk-text-lead TODO: Describe the services...
-
-      //- div
-        h2.uk-text-center Our team
-        div(class="uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m"
-            uk-grid)
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/thomas.svg"
-                    alt="Thomas Bruns"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div Thomas Bruns
-                div.uk-text-meta Co-founder & CEO
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/george.svg"
-                    alt="George Clanton"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div George Clanton
-                div.uk-text-meta Co-founder & President
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/martin.svg"
-                    alt="Martin Cade"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div Martin Cade
-                div.uk-text-meta Co-founder & CTO
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/carol.svg"
-                    alt="Carol Issa"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div Carol Issa
-                div.uk-text-meta Former Commercial Director
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/patricia.svg"
-                    alt="Patricia Kirk"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div Patricia Kirk
-                div.uk-text-meta Former Director of Strategy
-          div
-            div.uk-grid-small.uk-flex-middle(uk-grid)
-              div
-                img(src="images/about/nicole.svg"
-                    alt="Nicole Yokoyama"
-                    width="80"
-                    height="80")
-              div.uk-width-expand
-                div Nicole Yokoyama
-                div.uk-text-meta Product Marketing Manager
+          ul.uk-switcher
+            li
+              table(class="uk-table mu-service-table " +
+                "uk-table-responsive " +
+                "uk-table-divider " +
+                "uk-table-striped")
+                thead
+                  tr
+                    th
+                    th Service
+                    th Type
+                    th Infrastructure
+                    th Detail
+                tbody
+                  tr(mu-each="services.list" mu-each-as="svc")
+                    td
+                      img.tm-grayscale(mu-attr mu-attr-src="svc.type.icon" mu-attr-alt="svc.name" uk-img)
+                    td(mu-html="svc.name")
+                    td(mu-html="svc.type.name")
+                    td(mu-html="svc.tech.name")
+                    td ...
+              //- div(mu-debug="services.list")
+            li
+              p.uk-text-muted TODO...
+            li
+              table(class="uk-table " +
+                "uk-table-justify " +
+                "uk-table-responsive " +
+                "uk-table-divider " +
+                "uk-table-striped")
+                tbody
+                  tr
+                    th Subscribe
+                    td Email subscriptions are mocked, and no emails will be sent to addresses entered on the site
+                    td.uk-text-muted
+                      span.uk-label.uk-label-warning mock
+                  tr
+                    th CMS
+                    td A CMS system is intentionally omitted from the demo app
+                    td.uk-text-muted
+                      +icon('ban')
+                  tr
+                    th Search
+                    td Search/Filter functionality has been limited to the client only
+                    td
+                      span.uk-label.uk-label-warning client-side
+                  tr
+                    th Reviews
+                    td Reviews are a normal part of eCommerce, but removed here for simplicity
+                    td.uk-text-muted
+                      +icon('ban')
 
             
