Added support for embeddable layout/contents

--- a/src/storefront/src/templates/layouts/_index.pug
+++ b/src/storefront/src/templates/layouts/_index.pug
@@ -20,9 +20,6 @@ html(lang="en")
   body
     div#app.uk-offcanvas-content
       block index
+    //- shop scripts
     script(src="scripts/app.js" defer)
     script(src="scripts/charts.js" defer async)
-    //- script(src="scripts/script.js" defer)
-    //- script(src="//maps.googleapis.com/maps/api/js?key=&callback=initMap"
-    //-        async
-    //-        defer)
