Removed padding (footer) for the embedded mode

--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -29,6 +29,9 @@ main {
   &.short-footer {
     margin-bottom: @global-xlarge-margin;
   }
+  &.embedded {
+    margin: 0!important;
+  }
 
   + footer {
     background: @global-secondary-background;
