Changes per feedback from ui review

--- a/src/storefront/src/templates/layouts/_default.pug
+++ b/src/storefront/src/templates/layouts/_default.pug
@@ -12,7 +12,7 @@ block index
     block default
 
     //- Advantages
-    section.uk-section.uk-section-default.uk-section-small
+    section.uk-section.uk-section-muted.uk-section-small
       div.uk-container
         div(uk-slider)
           ul(class="uk-slider-items " +
