--- a/src/storefront/src/templates/pages/product.pug
+++ b/src/storefront/src/templates/pages/product.pug
@@ -89,8 +89,8 @@ block pages
 
                   //- Statuses
                   div
-                    span.uk-label.uk-label-success.uk-margin-xsmall-right new
-                    span.uk-label.uk-label-warning.uk-margin-xsmall-right top selling
+                    span.uk-label.uk-label-success.uk-text-bold.uk-margin-xsmall-right new
+                    span.uk-label.uk-label-warning.uk-text-bold.uk-margin-xsmall-right top selling
 
               //- Variations
               //- if product.statuses
@@ -133,7 +133,7 @@ block pages
                         //- Add to cart button
                         div
                           div(uk-spinner mu-hide="!adding")
-                          button.uk-button.uk-button-primary.tm-product-add-button.tm-shine(
+                          button.uk-button.uk-button-primary.tm-product-add-button.uk-text-bold.tm-shine(
                             mu-attr mu-attr-disabled="!product.count"
                             mu-hide="adding"
                             mu-click="atc"
