updated to use Quicksand font

--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -15,7 +15,7 @@
 // Typography
 //
 
-@global-font-family:                            "Roboto", "Helvetica Neue", Arial, sans-serif;
+@global-font-family:                            "Quicksand", "Helvetica Neue", Arial, sans-serif;
 @global-xsmall-font-size:                       0.6875rem; // 11px
 
 //
