--- a/src/storefront/src/templates/layouts/_index.pug
+++ b/src/storefront/src/templates/layouts/_index.pug
@@ -11,7 +11,8 @@ block vars
 html(lang="en")
   head
     include /partials/_head
-    link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500")
+    //- link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:400,500")
     link(rel="stylesheet" href="styles/uikit.css")
     link(rel="stylesheet" href="styles/shop.css")
     //- uikit scripts
