--- a/src/storefront/src/templates/pages/customer.pug
+++ b/src/storefront/src/templates/pages/customer.pug
@@ -41,4 +41,13 @@ block account
                 tr
                   th.uk-width-medium Username
                   td(mu-html="c.username")
-  
+
+          //- Exhibit WAF
+          section(mu-if="mock")
+            div.uk-grid-small(uk-grid)
+              img(data-src="/images/tech/waf.svg" uk-img)
+              div.uk-width-expand
+                | Below is a response containing sensitive information,
+                | which is <span class="uk-text-danger">blocked</span> by the
+                | Oracle Cloud Infrastructure WAF service.
+            div(mu-debug="data")
