changed storefront footer to promote OCI

--- a/src/storefront/src/templates/partials/_footer.pug
+++ b/src/storefront/src/templates/partials/_footer.pug
@@ -64,8 +64,6 @@ section.uk-section.uk-section-secondary.uk-section-xsmall.uk-light
     div.uk-text-muted.uk-text-xsmall.uk-margin-small.uk-width-1-1
       div(uk-grid class="uk-grid-collapse uk-child-width-1-1 uk-child-width-1-2@m")
         div
-          a.uk-icon-link(uk-icon="icon: uikit; ratio: 0.75;" href="https://getuikit.com/") UIkit
-          |  template with credits to 
-          a(href="https://github.com/chekromul/uikit-ecommerce-template") Roman Chekurov
+          a(href="https://cloud.oracle.com/iaas") Powered by Oracle Cloud Infrastructure
         div(class="uk-text-right@m")
           include /partials/_copyright
