added copyright headers to src and build

--- a/src/storefront/src/templates/layouts/_index.pug
+++ b/src/storefront/src/templates/layouts/_index.pug
@@ -2,6 +2,10 @@ include ../data/_data
 include ../mixins/_import
 
 doctype html
+//
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+<!-- BUILD: #{version}-->
 
 //- Variables
 block vars
