--- a/src/storefront/src/styles/uikit.less
+++ b/src/storefront/src/styles/uikit.less
@@ -1,3 +1,8 @@
+/**
+ * Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ * The Universal Permissive License (UPL), Version 1.0
+ */
+
 // UIKit Core
 @import "_uikit.less";
 
