added copyright headers to pug and less

--- a/src/storefront/src/templates/components/_navbar.pug
+++ b/src/storefront/src/templates/components/_navbar.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+
 div.uk-navbar-container.tm-navbar-container(uk-sticky="cls-active: tm-navbar-container-fixed")
   //- div.uk-container(uk-navbar="dropbar: true")
   div.uk-container(uk-navbar)
