--- a/src/storefront/src/templates/components/_toolbar.pug
+++ b/src/storefront/src/templates/components/_toolbar.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 include ../mixins/_icon
 
 div(class="uk-navbar-container " +
