--- a/src/storefront/src/templates/partials/_logo-inverse.pug
+++ b/src/storefront/src/templates/partials/_logo-inverse.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 386.637 111.31">
   <defs>
     <style type="text/css">
