--- a/src/storefront/src/templates/partials/_nav-offcanvas.pug
+++ b/src/storefront/src/templates/partials/_nav-offcanvas.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 div#nav-offcanvas.tm-nav-offcanvas(uk-offcanvas="overlay: true" mu-uk-component)
   aside.uk-offcanvas-bar.uk-padding-remove
 
