--- a/src/storefront/src/templates/views/userToolbar.pug
+++ b/src/storefront/src/templates/views/userToolbar.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 include ../mixins/_icon
 
 ul(mu-class="{'uk-navbar-nav': '!offcanvas', 'uk-nav uk-nav-default': 'offcanvas', 'mu-user-toolbar-inline': 'inline'}")
