--- a/src/storefront/src/styles/_uikit.less
+++ b/src/storefront/src/styles/_uikit.less
@@ -1,3 +1,8 @@
+/**
+ * Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ * The Universal Permissive License (UPL), Version 1.0
+ */
+
 @nm-components-path:                           "../../node_modules/uikit/src/less/components";
 
 // Base
