--- a/src/storefront/src/styles/components/mixin.less
+++ b/src/storefront/src/styles/components/mixin.less
@@ -1,3 +1,7 @@
+/**
+ * Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ * The Universal Permissive License (UPL), Version 1.0
+ */
 //
 // Component:       Mixin
 // Description:     Defines mixins which are used across all components
