--- a/src/storefront/src/templates/mixins/_filterbox.pug
+++ b/src/storefront/src/templates/mixins/_filterbox.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 mixin filterbox(list, name)
   ul.uk-list.tm-scrollbox
     li(mu-each=list mu-each-as="row")
