--- a/src/storefront/src/templates/mixins/_quantity.pug
+++ b/src/storefront/src/templates/mixins/_quantity.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 mixin quantity(qty, hooks)
   a(uk-icon="icon: minus; ratio: .75" mu-click= hooks + ".dec")
   input(class="uk-input tm-quantity-input"
