--- a/src/storefront/src/templates/partials/_products.pug
+++ b/src/storefront/src/templates/partials/_products.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 div.uk-grid-medium.uk-child-width-1-1(uk-grid)
 
   //- Items
