--- a/src/storefront/src/templates/views/orderCheckout.pug
+++ b/src/storefront/src/templates/views/orderCheckout.pug
@@ -1,3 +1,7 @@
+//-
+ Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ The Universal Permissive License (UPL), Version 1.0
+ 
 include ../data/_data
 include ../mixins/_import
 
