updated to reflect a dynamic architecture diagram

--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -416,6 +416,18 @@ main {
     right: 68%;
   }
 
+  &.mu-tech-compute {
+    top: 18%;
+    bottom: 18%;
+    left: 20%;
+    right: 20%;
+    height: auto;
+    img {
+      margin: -@global-small-margin/2;
+      max-height: 40px !important;
+    }
+  }
+
   &.mu-tech-oci {
     border-color: @color-red;
     margin: 0;
