--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -39,70 +39,89 @@ block article
               img.mu-tech-img.uk-position-bottom-left(uk-img data-src="images/tech/k8s.png")
             div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
             figure(mu-chart options="services.chart" onInit="initChart")
-
-          h2.uk-text-center Additional Information
-          div.uk-overflow-auto
-            ul.uk-child-width-expand(uk-tab)
-              li.uk-active
-                a Services
-              li
-                a Assumptions
-
-            ul.uk-switcher
-              li
-                table(class="uk-table mu-service-table " +
-                  "uk-table-responsive " +
-                  "uk-table-divider " +
-                  "uk-table-striped")
-                  thead
-                    tr
-                      th
-                      th Service
-                      th Type
-                      th Infrastructure
-                      th Detail
-                  tbody
-                    tr(mu-each="services.list" mu-each-as="svc")
-                      td
-                        img.tm-grayscale(mu-attr mu-attr-src="svc.type.icon" mu-attr-alt="svc.name" uk-img)
-                      td(mu-html="svc.name")
-                      td(mu-html="svc.type.name")
-                      td(mu-html="svc.tech.name")
-                      td ...
-              
-              li
-                table(class="uk-table " +
-                  "uk-table-justify " +
-                  "uk-table-responsive " +
-                  "uk-table-divider " +
-                  "uk-table-striped")
-                  tbody
-                    tr
-                      th Subscribe
-                      td Email subscriptions are mocked, and no emails will be sent to addresses entered on the site
-                      td.uk-text-muted
-                        span.uk-label.uk-label-warning mock
-                    tr
-                      th CMS
-                      td A CMS system is intentionally omitted from the demo app
-                      td.uk-text-muted
-                        +icon('ban')
-                    tr
-                      th Search
-                      td Search/Filter functionality has been limited to the client only
-                      td
-                        span.uk-label.uk-label-warning client-side
-                    tr
-                      th Reviews
-                      td Reviews are a normal part of eCommerce, but removed here for simplicity
-                      td.uk-text-muted
-                        +icon('ban')
         
         //- basic version
-        div(mu-if="basic")
+        div.mu-basic(mu-if="basic")
           p.uk-text-lead
             | Welcome to MuShop! This application was developed in order to
             | demonstrate the use of services offered by <b>Oracle Cloud Infrastructure</b>.
             | Below is a diagram of the basic architecture and services.
-          div
+          //- div
             img(uk-img data-src="/images/tech/basic.png")
+          div.uk-grid-medium.uk-flex-center(uk-grid)
+            div.uk-width-2-3
+              div.tm-ratio.tm-ratio-2-1
+                div.mu-tech.mu-tech-oci.uk-animation-fade(mu-tech-box="OCI")
+                  img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/oci.png")
+                div.mu-tech.mu-tech-compute.uk-animation-fade(mu-tech-box="COMPUTE" mu-hide="hide.compute")
+                  img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/compute.svg")
+                figure(mu-chart options="services.chart" onInit="initChart")
+
+        //- service info
+        h2.uk-text-center Additional Information
+        section.uk-overflow-auto
+          ul.uk-child-width-expand(uk-tab)
+            li.uk-active
+              a Services
+            li
+              a Assumptions
+
+          ul.uk-switcher
+            li
+              table(class="uk-table mu-service-table " +
+                "uk-table-responsive " +
+                "uk-table-divider " +
+                "uk-table-striped")
+                thead
+                  tr
+                    th
+                    th Service
+                    th Type
+                    th Infrastructure
+                    th Detail
+                tbody
+                  tr(mu-each="services.list" mu-each-as="svc")
+                    td
+                      img.tm-grayscale(mu-attr mu-attr-src="svc.type.icon" mu-attr-alt="svc.name" uk-img)
+                    td(mu-html="svc.name")
+                    td(mu-html="svc.type.name")
+                    td(mu-html="svc.tech.name")
+                    td ...
+            
+            li
+              table(class="uk-table " +
+                "uk-table-justify " +
+                "uk-table-responsive " +
+                "uk-table-divider " +
+                "uk-table-striped")
+                tbody
+                  tr
+                    th Subscribe
+                    td Email subscriptions are mocked, and no emails will be sent to addresses entered on the site
+                    td.uk-text-muted
+                      span.uk-label.uk-label-warning mock
+                  tr
+                    th CMS
+                    td A CMS system is intentionally omitted from the demo app
+                    td.uk-text-muted
+                      +icon('ban')
+                  tr
+                    th Search
+                    td Search/Filter functionality has been limited to the client only
+                    td
+                      span.uk-label.uk-label-warning client-side
+                  tr
+                    th Reviews
+                    td Reviews are a normal part of eCommerce, but removed here for simplicity
+                    td.uk-text-muted
+                      +icon('ban')
+
+        section.uk-margin-top(mu-if="basic")
+          hr.uk-divider-icon
+          div.uk-grid-small(uk-grid)
+            div.uk-text-primary
+              +icon('info', '1.5')
+            div.uk-width-expand
+              | MuShop also supports Cloud Native deployment, utilizing additional
+              | services with a more comprehensive architecture. See the full architecture 
+              a(href="about.html?full=true" mu-route) here.
