--- a/src/storefront/src/templates/pages/cart.pug
+++ b/src/storefront/src/templates/pages/cart.pug
@@ -56,7 +56,7 @@ block pages
               uk-grid)
 
             //- Product cell
-            div
+            div(class="uk-flex-last uk-flex-first@m")
               div.uk-grid-small(uk-grid)
 
                 //- Image
@@ -83,6 +83,7 @@ block pages
               div(class="uk-grid-small " +
                         "uk-child-width-1-1 " +
                         "uk-child-width-expand@s " +
+                        "uk-flex-nowrap " +
                         "uk-flex-middle " +
                         "uk-text-center"
                   uk-grid)
