--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -237,6 +237,7 @@
 @navbar-nav-item-height:                        80px;
 @navbar-nav-logo-height:                        @navbar-nav-item-height * 2/3;
 @navbar-nav-logo-height-small:                  @navbar-nav-item-height * 1/2;
+@navbar-nav-logo-height-xsmall:                 @navbar-nav-item-height * 2/5;
 @navbar-nav-item-font-size:                     18px;
 @header-navbar-nav-item-height:                 @navbar-nav-item-height;
 @header-navbar-nav-icon-height:                 28px;
