GDPR message and consent

--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -1484,6 +1484,13 @@ li.mu-product-slider-item {
   }
 }
 
+// Consent
+// ========================================================================
+.mu-consent {
+  box-shadow: 0 2px 8px fade(@global-color, 80%);
+  z-index: @sticky-z-index + 1;
+}
+
 
 // Pseudo
 // ========================================================================
