--- a/src/storefront/src/templates/layouts/_default.pug
+++ b/src/storefront/src/templates/layouts/_default.pug
@@ -37,5 +37,6 @@ block index
   footer
     include /partials/_footer
 
+  include ../partials/_consent
   include ../partials/_nav-offcanvas
   include ../partials/_cart-offcanvas
