bugfix basic about diagram service listing

--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -85,7 +85,7 @@ block article
                       img.tm-grayscale(mu-attr mu-attr-src="svc.type.icon" mu-attr-alt="svc.name" uk-img)
                     td(mu-html="svc.name")
                     td(mu-html="svc.type.name")
-                    td(mu-html="svc.tech.name")
+                    td(mu-html="svc.techref.name")
                     td ...
             
             li
