--- a/src/storefront/src/templates/views/userNotAuthenticated.pug
+++ b/src/storefront/src/templates/views/userNotAuthenticated.pug
@@ -5,7 +5,11 @@
 section.uk-section.uk-section-small
   div.uk-container
     div.uk-text-center
-      h1.uk-heading-hero Mu Who?
-      div.uk-text-lead(mu-if="!profile") Please login or register to continue
+      div(mu-if="!profile")
+        h1.uk-heading-hero ¯\_(ツ)_/¯
+        div.uk-text-lead(mu-if="!profile") Please login or register to continue
+      div(mu-if="profile")
+        h1.uk-heading-hero You're here, yay!
+
       div.uk-flex-center(uk-grid)
         div(mu-user-toolbar inline="true")
