--- a/src/storefront/src/templates/data/_data.pug
+++ b/src/storefront/src/templates/data/_data.pug
@@ -246,7 +246,7 @@
 
   var advantages = [{
     title: 'Love cats',
-    description: 'The internet does, so why shouldn\'t we?',
+    description: 'The internet does, so we do too',
     icon: 'heart'
   }, {
     title: 'Unbeatable',
